--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ img {
     max-width: 21.18em;
 }
 
+.header-top img:hover {
+    transform: scale(1.2);
+}
+
 .menu{
     width: 100%;
     max-width: 50em;
@@ -100,6 +104,10 @@ img {
     width: 40%;
     margin-left: 5%;
 }
+
+    .image-banner img:hover {
+        transform: scale(1.2);
+    }
 
 .text-banner{
     width: 40%;
@@ -215,6 +223,317 @@ img {
 .content-sobre img {
     max-width: 31.875em;
 }
+
+.matches{
+    color: white;
+    width: 100%;
+    height: 7.5em;
+    background-color: var(--background);
+    display: flex;
+    justify-content: center;
+}
+
+.content-matches{
+    width: 85%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.live-matches{
+    text-transform: uppercase;
+    width: 30%;
+    margin: 0 6%;
+    display: flex;
+}
+
+.later-matches{
+    width: 70%;
+    display: flex;
+}
+
+.live-matches h2, .later-matches h2{
+    margin-right: 20px;
+}
+
+.teams-matches{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border: 4px solid white;
+    transition: 0.2s;
+    opacity: 1;
+}
+
+.teams-matches:hover{
+    opacity: 1;
+    border: 4px solid var(--blue);
+}
+
+#espacamento{
+    margin-right: 10px;
+}
+
+.teams-matches p, img{
+    padding: 0 13px;
+}
+
+/* News - Section */
+.news{
+    width: 100%;
+    height: 61.25em;
+    background-color: #1E1C21;
+}
+
+.news h2{
+    color: white;
+    font-size: 35px;
+    margin-left: 10%;
+    padding: 30px;
+    padding-left: 0px;
+}
+
+.content-news{
+    width: 80%;
+    margin: 0 10%;
+    display: flex;
+}
+
+.news-news{
+    width: 80%;
+}
+
+.content-tabela{
+    width: 20%;
+}
+
+.bloco-news{
+    width: 90%;
+    margin-bottom: 4%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.news-bloco{
+    width: 14.81em;
+    height: 22.87em;
+    background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
+    box-shadow: 1px 1px 20px 4px #000000;
+    display: flex;
+    flex-direction: column;
+    transition: 0.2s;
+}
+
+.news-bloco:hover{
+    transform: scale(1.1);
+}
+
+
+.team-tabela{
+    color: white;
+    margin-bottom: 8px;
+    padding: 10px 0px;
+    border: 5px solid white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.2s;
+}
+
+.team-tabela:hover{
+    border: 5px solid var(--blue);
+}
+
+.team-tabela p{
+    padding-top: 10px;
+}
+
+.placar-tabela{
+    width: 221px;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+
+.text-bloco{
+    color: white;
+    margin: 10px;
+    margin-top: 0;
+}
+
+.text-bloco h3{
+    font-family: 18px;
+    text-transform: uppercase;
+}
+
+
+.image-bloco img{
+    padding: 0;
+}
+
+.tabela-news{
+    width: 14.81em;
+    height: 46.93em;
+    background: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
+    box-shadow: 1px 1px 20px 4px #000000;
+}
+
+/* Footer - Footer */
+.footer{
+    width: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+.content-footer{
+    width: 100%;
+    height: 100%;
+    margin: 10px 10%;
+}
+
+.superior-footer{
+    width: 100%;
+    height: 75%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.links-uteis-footer{
+    width: 30%;
+}
+
+.links-uteis-footer h4{
+    color: white;
+    text-decoration: underline;
+}
+
+.links-uteis-footer a{
+    color: white;
+    font-size: 12px;
+    text-decoration: none;
+}
+
+.links-uteis-footer a:hover{
+    text-decoration: underline;
+}
+
+.mapa-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+}
+
+.mapa-site-footer h4{
+    color: white;
+    padding: 5px;
+    text-decoration: none;
+}
+
+.mapa-site-footer ul{
+    display: flex;
+}
+
+.mapa-site-footer a{
+    color: white;
+    margin: 14px;
+    transition: 0.2s;
+    text-decoration: none;
+}
+
+.social-medias-footer{
+    width: 30%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.social-medias-footer h4{
+    color: white;
+    padding: 7px;
+    text-decoration: none;
+}
+
+.redes-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.links-redes{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.links-redes img{
+    transition: 0.2s;
+}
+
+.links-redes img:hover{
+    transform: scale(1.2);
+}
+
+.line-footer{
+    width: 100%;
+    border: 1px solid #cdcdcd;
+    background-color: #cdcdcd;
+    margin: 25px 0;
+}
+
+.inferior-footer{
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-footer{
+    width: 30%;
+}
+
+.logo-footer img{
+    width: 100%;
+    max-width: 250px;
+    transition: 0.2s;
+}
+
+.logo-footer img:hover{
+    transform: scale(1.1);
+}
+
+.direitos-footer{
+    color: white;
+}
+
+.direitos-footer span:hover{
+    color: var(--blue);
+}
+
+.botoes-footer{
+    width: 30%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.buttons-footer ul{
+    display: flex;
+}
+
+.buttons-footer a{
+    color: white;
+    padding: 10px;
+    margin: 5px;
+    text-decoration: none;
+}
+
+.buttons-footer a:hover{
+    text-decoration: underline;
+}
+
 
 /* 1199px */
 @media screen and (max-width: 74.93em){
