--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ body{
     padding: 20px 0px;
 }
 
-.image-about{
+.image-sobre{
     width: 60%;
     display: flex;
     justify-content: center;
@@ -240,7 +240,7 @@ body{
 }
 
 .content-partidas{
-    width: 80%;
+    width: 90%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -253,16 +253,12 @@ body{
 }
 
 .proximas-partidas{
-    width: 70%;
+    width: 0%;
     display: flex;
 }
 
-.ao-vivo h2, .proximas-partidas h2{
-    margin-right: 20px;
-    text-transform: uppercase;
-}
-
 .confrontos{
+    width: auto;
     display: flex;
     align-items: center;
     padding: 10px;
@@ -398,7 +394,7 @@ body{
     margin: 10px 10%;
 }
 
-.superior-footer{
+.cima-footer{
     width: 100%;
     height: 75%;
     display: flex;
@@ -470,7 +466,7 @@ body{
     margin: 25px 0;
 }
 
-.inferior-footer{
+.baixo-footer{
     margin-bottom: 15px;
     display: flex;
     justify-content: space-between;
@@ -499,7 +495,7 @@ body{
     color: var(--blue);
 }
 
-
+/* 1199 */
 @media screen and (max-width: 75em){
     .content img{
         margin-right: 2%;
@@ -551,7 +547,7 @@ body{
         height: 390px;
     }
 
-    .image-about{
+    .image-sobre{
         width: 40%;
     }
 
@@ -563,6 +559,7 @@ body{
     }
 
     .content-partidas{
+        width: auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -666,7 +663,7 @@ body{
         transition: 0.2s;
     }
 }
-
+/* 991 */
 @media screen and (max-width: 62em){
     .cabecalho img{
         width: 35%;
@@ -732,15 +729,21 @@ body{
         justify-content: center;
         align-items: center;
     }
-    
-    .texto-sobre{
-        width: 100%;
-        height: 320px;
+     .content-sobre {
+         width: auto;
+         margin: 20px;
+     }
+
+     .texto-sobre{
+        width: 40%;
+        height: 500px;
         margin-left: 0;
     }
     
-    .image-about{
-        display: none;
+    .image-sobre{
+        width: 50%;
+        display: flex;
+        justify-content: center;
     }
     .partidas{
         height: auto;
@@ -807,19 +810,19 @@ body{
         display: none;
     }
 
-    .superior-footer{
+    .cima-footer{
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    .inferior-footer{
+    .baixo-footer{
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 }
-
+/* 767 */
 @media screen and (max-width: 48em){
     .cabecalho img{
         width: 100%;
@@ -890,10 +893,29 @@ body{
     .angulo {
         height: 24.125em;
     }
+    
+    .content-sobre {
+        width: auto;
+        height: 200px;
+    }
+
+    .texto-sobre h2 {
+        font-size: 32px;
+    }
+
+    .texto-sobre p {
+        font-size: 18px;
+    }
+
 
     .texto-sobre{
+        width: 80%;
         height: 340px;
-    }   
+    }  
+    
+    .image-sobre {
+        display: none;
+    }
 
     .bloco-noticia {
         width: 100%;
@@ -911,7 +933,6 @@ body{
         box-shadow: 1px 1px 20px 4px #000000;
         display: flex;
         flex-direction: column;
-        transition: 0.2s;
         margin: 15px 0;
     }
 
@@ -981,7 +1002,7 @@ body{
     }
 
 
-    .inferior-footer{
+    .baixo-footer{
         justify-content: center;
     }
 
